infrastructuur/ingress/ingress-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: festivalstream-ingress
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  spec: 
    rules:
    - host: www.festivalstream.nl
      http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-client-svc
            port:
              number: 80
    - host: stream.festivalstream.nl
      http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streaming-svc
            port:
              number: 80
    - host: chat.festivalstream.nl
      http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-svc
            port:
              number: 80
    - host: vod.festivalstream.nl
      http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vod-svc
            port:
              number: 80
